<resources>
    <string name="app_name">TextProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">profile</string>
    <string name="open_drawer_text">Open Drawer</string>
    <string name="close_drawer_text">Close Drawer</string>
    <string name="my_courses">my courses</string>
    <string name="course_title">Course Title</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="course_description">Course Description</string>
    <string name="already_have_account">already_have_account</string>
    <string name="sign_up">sign_up</string>
    <string name="fullname">fullName</string>
    <string name="abc_hotmail_com">abc_hotmail_com</string>
    <string name="your_password">your_password</string>
    <string name="confirmPassword">confirmPassword</string>
    <string name="signIn">signin</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="aliIsmail">AliIsmail</string>
    <string name="course_hours">Course Hours</string>
    <string name="course_price">Course Price</string>
    <string name="select_category">Select Category</string>
    <string name="description">description</string>
</resources>